@startuml

title __HOME's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        class com.pis.buy2gether.usecases.home.home.HomeFragment {
            - categories : Category[]
            - cloud_upload : Button
            - search_bar : EditText
            - tabLayout_categoria : TabLayout
            - viewPager_categoria : ViewPager
            + onCreateView()
            + onDestroyView()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        class com.pis.buy2gether.usecases.home.home.HomeViewModel {
            - mText : MutableLiveData<String>
            + HomeViewModel()
            + getText()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        class com.pis.buy2gether.usecases.home.home.TabFragment {
            - context : Context
            - list : MutableLiveData<ArrayList<Grup>>
            - recyclerView : RecyclerView
            + TabFragment()
            + TabFragment()
            + TabFragment()
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        class com.pis.buy2gether.usecases.home.home.TypeRvAdapter {
            {static} - act : Activity
            - products : ArrayList<Grup>
            + TypeRvAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
            + updateList()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        class com.pis.buy2gether.usecases.home.home.TypeRvAdapter.TypeRvViewHolder {
            ~ product_button : AppCompatImageButton
            ~ product_image : ImageView
            ~ product_name : TextView
            ~ product_price : TextView
            - product_id : String
            + TypeRvViewHolder()
            + getId()
            + setId()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        class com.pis.buy2gether.usecases.home.home.TypeRvViewModel {
            - grupList : MutableLiveData<ArrayList<Grup>>
            + TypeRvViewModel()
            + getGrupByCategory()
            + getGrupBySearch()
            + getPhoto()
            - setList()
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.home.HomeFragment o-- com.pis.buy2gether.usecases.common.adaptadoresUniversales.SeccionesAdapter : adapter_categoria
  com.pis.buy2gether.usecases.home.home.HomeFragment o-- com.pis.buy2gether.usecases.home.home.HomeViewModel : homeViewModel
  com.pis.buy2gether.usecases.home.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel
  com.pis.buy2gether.usecases.home.home.TabFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.home.TabFragment o-- com.pis.buy2gether.usecases.home.home.TypeRvAdapter : typeRvAdapter
  com.pis.buy2gether.usecases.home.home.TypeRvAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.pis.buy2gether.usecases.home.home.TypeRvAdapter +-down- com.pis.buy2gether.usecases.home.home.TypeRvAdapter.TypeRvViewHolder
  com.pis.buy2gether.usecases.home.home.TypeRvAdapter.TypeRvViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
